@@ -64,6 +64,23 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="41.alpha" date="2021-07-10" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 41.alpha</p>
+        <ul>
+          <li>Updated Translations</li>
+          <li>Adaptive preferences window !85 (Adrien Plazas)</li>
+          <li>Fixed currency conversion using convert button #216 (Robert Roth)</li>
+          <li>User interface reworked, adaptive UI !81 (Adrien Plazas)</li>
+          <li>Enlarged calculator icon in help !82 (Sabri Ünal)</li>
+          <li>Code cleanup (Robert Roth)</li>
+          <li>Fixed kilohertz shorthand !87 (scootergrisen)</li>
+          <li>Fixed donation link !88 (René Genz)</li>
+          <li>Added support using calculator without currency conversion for privacy !89 (Ray Strode)</li>
+          <li>Added support for function description of custom functions using @ !90 (Martin Jirku)</li>
+        </ul>
+      </description>
+    </release>
     <release version="40.0" date="2021-03-19" type="stable">
       <description>
         <p>Overview of changes in gnome-calculator 40.0</p>
