@@ -1,3 +1,15 @@
+Overview of changes in gnome-calculator 41.alpha
+    * Updated Translations
+    * Adaptive preferences window !85 (Adrien Plazas)
+    * Fixed currency conversion using convert button #216 (Robert Roth)
+    * User interface reworked, adaptive UI !81 (Adrien Plazas)
+    * Enlarged calculator icon in help !82 (Sabri Ünal)
+    * Code cleanup (Robert Roth)
+    * Fixed kilohertz shorthand !87 (scootergrisen)
+    * Fixed donation link !88 (René Genz)
+    * Added support using calculator without currency conversion for privacy !89 (Ray Strode)
+    * Added support for function description of custom functions using @ !90 (Martin Jirku)
+
 Overview of changes in gnome-calculator 40.0
     * Updated Translations
 
